--- a/index.html
+++ b/index.html
@@ -4,47 +4,54 @@
 
 <head>
     <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 </head>
+
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="navbar-brand" href="#">Calon Pengurus</a>
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Bagan</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
+                <a class="navbar-brand" href="#">PUCC</a>
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Bagan</a>
+                    </li>
+                </ul>
             </div>
-          </nav>
+        </nav>
     </header>
-    
+
     <main>
         <!-- Calon- Ketum-Waketum -->
         <div class="container mt-5">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-12">
+                    <h3 class="mb-4">Pemilihan Kepengurusan Baru PUCC 2021</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
                     <div class="card mb-3">
-                        <h5 class="card-header">Paslon 1 (Jumlah Suara <spam id="suara-1">0</spam>)</h5>
+                        <h5 class="card-header bg-dark text-white">Kandidat 1</h5>
                         <img src="/image/g1.png" class="img-fluid card-img-top">
                         <div class="card-body">
+                            <p class="text-center">Jumlah Suara</p>
+                            <h1 id="suara-1" class="text-center">0</h1>
                             <p class="card-text">No Name ( Ketua Umum) <br /> No Name ( Wakil Ketua Umum) </p>
                             <button type="button" class="btn btn-dark">VIsi & Misi</button>
                             <button type="button" class="btn btn-success button-vote" data-dt="1">Voting</button>
@@ -52,45 +59,36 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="card mb-3">
-                        <h5 class="card-header">Paslon 2 (Jumlah Suara <spam id="suara-2">0</spam>)</h5>
+                        <h5 class="card-header bg-dark text-white">Kandidat 2</h5>
                         <img src="/image/g1.png" class="img-fluid card-img-top">
                         <div class="card-body">
+                            <p class="text-center">Jumlah Suara</p>
+                            <h1 id="suara-2" class="text-center">0</h1>
                             <p class="card-text">No Name ( Ketua Umum) <br /> No Name ( Wakil Ketua Umum) </p>
                             <button type="button" class="btn btn-dark">VIsi & Misi</button>
                             <button type="button" class="btn btn-success button-vote" data-dt="2">Voting</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="card mb-3">
-                        <h5 class="card-header">Paslon 3 (Jumlah Suara <spam id="suara-3">0</spam>)</h5>
-                        <img src="/image/g1.png" class="img-fluid card-img-top">
-                        <div class="card-body">
-                            <p class="card-text">No Name ( Ketua Umum) <br /> No Name ( Wakil Ketua Umum) </p>
-                            <button type="button" class="btn btn-dark">VIsi & Misi</button>
-                            <button type="button" class="btn btn-success button-vote" data-dt="3">Voting</button>
-                        </div>
-                    </div>
-                </div>
-            </div><br/>
+            </div><br />
 
             <!-- ##### -->
             <div class="row mb-4">
                 <div class="col-lg-4">
                     <div class="card text-white bg-info mb-3">
-                        <div class="card-header">Total Anggota Yang Telah Hadir</div>
+                        <div class="card-header">Total Anggota</div>
                         <div class="card-body">
-                        <h5 class="card-title text-center">0 Anggota</h5>
+                            <h5 class="card-title text-center">0 Anggota</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="card text-white bg-success mb-3" >
-                        <div class="card-header" >Total Anggota Yang Sudah Voting</div>
+                    <div class="card text-white bg-success mb-3">
+                        <div class="card-header">Total Anggota Yang Sudah Voting</div>
                         <div class="card-body">
-                        <h5 class="card-title text-center">0 Anggota</h5>
+                            <h5 class="card-title text-center">0 Anggota</h5>
                         </div>
                     </div>
                 </div>
@@ -98,7 +96,7 @@
                     <div class="card text-white bg-secondary mb-3">
                         <div class="card-header">Anggota Yang Belum Voting</div>
                         <div class="card-body">
-                        <h5 class="card-title text-center">0 Anggota</h5>
+                            <h5 class="card-title text-center">0 Anggota</h5>
                         </div>
                     </div>
                 </div>
@@ -107,69 +105,75 @@
             <div class="row mb-5">
                 <div class="col-lg-12">
                     <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action active">
+                        <a href="#" class="list-group-item list-group-item-action active bg-dark">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">Masukan Dan Saran </h5>
                             </div>
-                            </a>
+                        </a>
                         <a href="#" class="list-group-item list-group-item-action ">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">No Name</h5>
-                            <small>3 days ago</small>
-                        </div>
-                        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">No Name</h5>
+                                <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
+                                risus varius blandit.</p>
                         </a>
                         <a href="#" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">No Name</h5>
-                            <small class="text-muted">3 days ago</small>
-                        </div>
-                        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">No Name</h5>
+                                <small class="text-muted">3 days ago</small>
+                            </div>
+                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
+                                risus varius blandit.</p>
                         </a>
                         <a href="#" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">No Name</h5>
-                            <small class="text-muted">3 days ago</small>
-                        </div>
-                        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">No Name</h5>
+                                <small class="text-muted">3 days ago</small>
+                            </div>
+                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
+                                risus varius blandit.</p>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-    </main>   
+    </main>
 
     <footer>
-        <a href="#" class="list-group-item list-group-item-action list-group-item-dark">&copy; #######</a>
+        <a href="#" class="list-group-item list-group-item-action list-group-item-dark">&copy; PUCC - DIV. PROGRAMMING @
+            2020</a>
     </footer>
 
     <script>
-        $(function() {
+        $(function () {
             var socket = io.connect();
 
             // event button vote
-            $('.button-vote').on('click', function() {
+            $('.button-vote').on('click', function () {
                 var psln = $(this).attr('data-dt');
                 console.log("anda menekan vote: " + psln);
                 socket.emit('sdvote', psln);
             });
 
             // terima brodcast dri client
-            socket.on('new-record', function(data) {
+            socket.on('new-record', function (data) {
                 console.log("data baru : " + data);
-                var currentSuara = parseInt($('#suara-'+data).text());
-                console.log("data current: "+currentSuara);
+                var currentSuara = parseInt($('#suara-' + data).text());
+                console.log("data current: " + currentSuara);
                 toastr.info('Seseorang baru saja melakukan voting..!');
-                $('#suara-'+data).text(currentSuara+1);
+                $('#suara-' + data).text(currentSuara + 1);
             });
 
             // listen initial data dari server
-            socket.on('initial-data', function(data) {
-                $.each(data, function(i, item) {
-                    $('#suara-'+item.no_paslon).text(item.jumlah);
+            socket.on('initial-data', function (data) {
+                console.log(data);
+                $.each(data, function (i, item) {
+                    $('#suara-' + item.no_paslon).text(item.jumlah);
                 });
             });
         });
     </script>
 </body>
+
 </html>
