--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 
 <head>
     <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 </head>
 
@@ -54,7 +51,7 @@
                             <h1 id="suara-1" class="text-center">0</h1>
                             <p class="card-text">No Name ( Ketua Umum) <br /> No Name ( Wakil Ketua Umum) </p>
                             <button type="button" class="btn btn-dark">VIsi & Misi</button>
-                            <button type="button" class="btn btn-success button-vote" data-dt="1">Voting</button>
+                            <button type="button" class="btn btn-success btnvote" onclick="changeAttributeVote(1)" data-toggle="modal" data-target="#voteModal">Vote</button>
                         </div>
                     </div>
                 </div>
@@ -68,7 +65,7 @@
                             <h1 id="suara-2" class="text-center">0</h1>
                             <p class="card-text">No Name ( Ketua Umum) <br /> No Name ( Wakil Ketua Umum) </p>
                             <button type="button" class="btn btn-dark">VIsi & Misi</button>
-                            <button type="button" class="btn btn-success button-vote" data-dt="2">Voting</button>
+                            <button type="button" class="btn btn-success btnvote" onclick="changeAttributeVote(2)" data-toggle="modal" data-target="#voteModal">Vote</button>
                         </div>
                     </div>
                 </div>
@@ -80,23 +77,23 @@
                     <div class="card text-white bg-info mb-3">
                         <div class="card-header">Total Anggota</div>
                         <div class="card-body">
-                            <h5 class="card-title text-center">0 Anggota</h5>
+                            <h5 class="card-title text-center"><b id="total_anggota">0</b> Anggota</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="card text-white bg-success mb-3">
-                        <div class="card-header">Total Anggota Yang Sudah Voting</div>
+                        <div class="card-header">Total Anggota Yang Sudah Vote</div>
                         <div class="card-body">
-                            <h5 class="card-title text-center">0 Anggota</h5>
+                            <h5 class="card-title text-center"><b id="anggota_voted">0</b> Anggota</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="card text-white bg-secondary mb-3">
-                        <div class="card-header">Anggota Yang Belum Voting</div>
+                        <div class="card-header">Anggota Yang Belum Vote</div>
                         <div class="card-body">
-                            <h5 class="card-title text-center">0 Anggota</h5>
+                            <h5 class="card-title text-center"><b id="anggota_voted">0</b> Anggota</h5>
                         </div>
                     </div>
                 </div>
@@ -140,39 +137,99 @@
         </div>
     </main>
 
+    <!-- Modal -->
+    <div class="modal fade" id="voteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-primary text-white">
+                    <h5 class="modal-title" id="exampleModalLabel">Saran dan Masukan</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div class="alert alert-primary" role="alert" id="notifikasii">
+                                </div>
+                                <div class="form-group">
+                                    <label for="masukandansaran">Masukan dan Saran</label>
+                                    <textarea class="form-control" name="masukandansaran" id="masukandansaran" rows="5" placeholder="Opsional.."></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-vote="0" id="send">Vote!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer>
-        <a href="#" class="list-group-item list-group-item-action list-group-item-dark">&copy; PUCC - DIV. PROGRAMMING @
-            2020</a>
+        <a href="#" class="list-group-item list-group-item-action list-group-item-dark">&copy; PUCC - DIV. PROGRAMMING @2020</a>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <script>
-        $(function () {
-            var socket = io.connect();
+        var socket = io.connect();
 
-            // event button vote
-            $('.button-vote').on('click', function () {
-                var psln = $(this).attr('data-dt');
-                console.log("anda menekan vote: " + psln);
-                socket.emit('sdvote', psln);
+        // event button vote
+        function changeAttributeVote(number) {
+            $('#send').attr('data-vote', number);
+            $('#notifikasii').text("Anda akan memilih pasangan calon nomor " + number +" ..");
+            toastr.success('tes toast');
+        }
+
+        // send to server
+        $('#send').on('click', function() {
+            let data = {
+                vote: $('#send').data('vote'),
+                masukansaran: $('textarea#masukandansaran').val()
+            };
+
+            socket.emit('sdvote', data, function(result) {
+                if (result) {
+                    toastr.success('Anda berhasil melakukan vote!');
+                } else {
+                    toastr.error('Ups, ada kesalahan saat melakukan vote!');
+                }
             });
 
-            // terima brodcast dri client
-            socket.on('new-record', function (data) {
-                console.log("data baru : " + data);
-                var currentSuara = parseInt($('#suara-' + data).text());
-                console.log("data current: " + currentSuara);
-                toastr.info('Seseorang baru saja melakukan voting..!');
-                $('#suara-' + data).text(currentSuara + 1);
-            });
-
-            // listen initial data dari server
-            socket.on('initial-data', function (data) {
-                console.log(data);
-                $.each(data, function (i, item) {
-                    $('#suara-' + item.no_paslon).text(item.jumlah);
-                });
-            });
+            $('.btnvote').attr('disabled', true);
+            $('#voteModal').modal('hide');
         });
+
+        // terima brodcast dri client
+        socket.on('new-record', function (data) {
+            console.log("data baru : " + data);
+            let currentSuara = parseInt(document.getElementById('suara-' + data.vote).innerHTML);
+            console.log("data current: " + currentSuara);
+            toastr.info('Seseorang baru saja melakukan vote..!');
+            document.getElementById('suara-' + data.vote).innerHTML = currentSuara + 1;
+        });
+
+        // listen initial data dari server
+        socket.on('initial-data', function (data) {
+            $.each(data.data_vote, function (i, item) {
+                $('#suara-' + item.no_paslon).text(item.jumlah);
+            });
+
+            document.getElementById('total_anggota').innerHTML = data.stat_anggota[0].count;
+            document.getElementById('anggota_voted').innerHTML = data.anggota_voted[0].count;
+
+            $('.btnvote').attr('disabled', data.has_voted);
+        });
+
+        $('#voteModal').on('shown.bs.modal', function () {
+            $('#masukandansaran').trigger('focus');
+        })
     </script>
 </body>
 
