--- a/login.html
+++ b/login.html
@@ -1,48 +1,61 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>PUCC Vote</title>
-		<style>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>PUCC Vote | Login</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+	<style>
 		.login-form {
-			width: 300px;
-			margin: 0 auto;
-			font-family: Tahoma, Geneva, sans-serif;
+			width: 340px;
+			margin: 50px auto;
+			font-size: 15px;
 		}
-		.login-form h1 {
-			text-align: center;
-			color: #4d4d4d;
-			font-size: 24px;
-			padding: 20px 0 20px 0;
-		}
-		.login-form input[type="password"],
-		.login-form input[type="text"] {
-			width: 100%;
-			padding: 15px;
-			border: 1px solid #dddddd;
+
+		.login-form form {
 			margin-bottom: 15px;
-			box-sizing:border-box;
+			background: #f7f7f7;
+			box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+			padding: 30px;
 		}
-		.login-form input[type="submit"] {
-			width: 100%;
-			padding: 15px;
-			background-color: #535b63;
-			border: 0;
-			box-sizing: border-box;
-			cursor: pointer;
+
+		.login-form h2 {
+			margin: 0 0 15px;
+		}
+
+		.form-control,
+		.btn {
+			min-height: 38px;
+			border-radius: 2px;
+		}
+
+		.btn {
+			font-size: 15px;
 			font-weight: bold;
-			color: #ffffff;
 		}
-		</style>
-	</head>
-	<body>
-		<div class="login-form">
-			<h1>Login Form</h1>
-			<form action="auth" method="POST">
-				<input type="text" name="username" placeholder="Email" required>
-				<input type="password" name="password" placeholder="Password" required>
-				<input type="submit">
-			</form>
-		</div>
-	</body>
+	</style>
+</head>
+
+<body>
+	<div class="login-form">
+		<form action="auth" method="post">
+			<h3 class="text-center mb-4">PUCC Vote | Login</h3>
+			<div class="form-group">
+				<input type="text" name="username" class="form-control" placeholder="Username" required="required">
+			</div>
+			<div class="form-group">
+				<input type="password" name="password" class="form-control" placeholder="Password" required="required">
+			</div>
+			<div class="form-group">
+				<button type="submit" class="btn btn-primary btn-block">Log in</button>
+			</div>
+		</form>
+	</div>
+</body>
+
 </html>
