--- a/login.html
+++ b/login.html
@@ -42,8 +42,9 @@
 </head>
 
 <body>
-	<div class="login-form">
+	<div class="login-form text-center">
 		<form action="auth" method="post">
+			<img src="/image/pucclogo.png" class="img-fluid mx-auto d-block" width="55%">
 			<h3 class="text-center mb-4">PUCC Vote | Login</h3>
 			<div class="form-group">
 				<input type="text" name="username" class="form-control" placeholder="Username" required="required">
